fix: src @font-face

--- a/personal-in/site/me.css
+++ b/personal-in/site/me.css
@@ -21,7 +21,7 @@ body {
     }
 @font-face {
     font-family: 'RobotoThin';
-    src: url(personal-in/site/fonts/RobotoMono-Thin.ttf);
+    src: url(RobotoMono-Thin.ttf);
 }
 
 .main-body{
