--- a/personal-in/site/me.css
+++ b/personal-in/site/me.css
@@ -1,6 +1,7 @@
 :root {
     /*backgrounds*/
     --default-background: #262626;
+    --default-dark-header: #313131;
     --theme-background: #c31a1a;
 
     /*fonts*/
@@ -11,33 +12,42 @@
 body {
     background-color: var(--default-background);
     color: var(--default-font);
-    font-size: 24px !important;
+    font-size: 18px !important;
     font-family: 'RobotoThin', sans-serif !important;
+}
+
+a {
+    color: var(--default-font);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--theme-background);
 }
 
 @font-face {
     font-family: 'Roboto';
     src: url(RobotoMono-VariableFont_wght.ttf);
-    }
+}
+
 @font-face {
     font-family: 'RobotoThin';
     src: url(RobotoMono-Thin.ttf);
 }
 
-.main-body{
+.main-body {
     padding: 0px 5rem !important;
 }
 
-.dft-header{
-    background: var(--theme-background);
+.dft-header {
+    background: var(--default-dark-header);
     min-width: 60px;
-    padding: 2.5rem 6rem;
-    box-shadow: 0px 3px 0px #a30000;
+    padding: 1.5rem 6rem;
     display: flex;
     justify-content: space-between;
 }
 
-.hdr-content{
+.hdr-content {
     display: flex;
     width: 50%;
     justify-content: space-evenly;
